# aporat

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: outsourcing-tools-research.md  pitch-deck-turkish-mfa.md  plan.md  product-improvement-plan.md  turkey-country-brief.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: auth.py  cases.py  dashboard.py  defence.py  scans.py
backend/app/core/: auth.py  celery_app.py  config.py  database.py
backend/app/models/: case.py
backend/app/osint/: holehe_runner.py  maigret_runner.py  sherlock_runner.py
backend/app/schemas/: auth.py  case.py
backend/app/tasks/: osint_tasks.py
backend/scripts/: seed.py
src/: App.tsx  index.css
src/api/: AuthContext.tsx  client.ts  hooks.ts  v3-hooks.ts  v3-supabase.ts
src/components/: ArchitectureDiagram.tsx  Company.tsx  CompassLogo.tsx  Contact.tsx  ContactDialog.tsx  Differentiators.tsx  Footer.tsx  Hero.tsx  HeroGraph.tsx  HowItWorks.tsx  Navbar.tsx  Products.tsx  ScrollToTop.tsx  Security.tsx  Solutions.tsx  TrustStrip.tsx
src/contexts/: P2AuthContext.tsx  PlatformContext.tsx  PresentationContext.tsx  TourContext.tsx
src/hooks/: useAuditLog.ts  useCountryRisk.ts  useDefenceApi.ts  useFadeIn.ts  usePathAnalysis.ts  usePlatformKeyboard.ts  useRealtimeAlerts.ts  useScrollToSection.ts  useUserRole.ts  useVizesepetimData.ts
src/lib/: analytics.ts  faceSearchReport.ts  i18n.ts
src/pages/: Alternatives.tsx  Demo.tsx  DemoA.tsx  (+45 more)
supabase/: config.toml
(+183 files in other folders)
