[project]
name = "portolan-backend"
version = "0.1.0"
description = "Portolan Labs Intelligence Platform — Backend API & OSINT Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "aiofiles>=24.1.0",
    "psycopg2-binary>=2.9.0",
    "flower>=2.0.0",
]

[project.optional-dependencies]
osint = [
    "sherlock-project>=0.15.0",
    "maigret>=0.4.4",
    "holehe>=1.61",
    "social-analyzer>=0.0.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
